NeoForge loading, bugs and clean up to be done/fixed